# new_automation

./: .gitignore  README.md  main.py  pyproject.toml
docs/: ml_idea.md  new_idea.md  table_modelings.md  현재 로깅 방식.md
src/: downloader.py  image_processor.py  main.py  scraper.py
src/crawler/: __init__.py  login.py  navigator.py  popup_handler.py  tubular.py
src/test/: test.ipynb  test2.ipynb  test_crawler.py
