[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[project]
name = "new-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "playwright>=1.56.0",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
